[gd_scene load_steps=8 format=2]

[ext_resource path="res://Upgrade_Folder/Assets/Fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Upgrade_Folder/UpgradeMenu.gd" type="Script" id=2]
[ext_resource path="res://Upgrade_Folder/Assets/Sound/Button_Prep.wav" type="AudioStream" id=3]
[ext_resource path="res://Upgrade_Folder/Assets/Sound/Button_Press.wav" type="AudioStream" id=4]
[ext_resource path="res://Upgrade_Folder/Assets/Icons/Runaway_Icon.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 1 )

[node name="UpgradeMenu" type="CanvasLayer"]
script = ExtResource( 2 )
on_miss_u1_cost = 50
on_miss_u2_cost = 150
on_miss_u4_cost = 500
on_hit_u1_cost = 250
on_hit_u2_cost = 300
on_hit_u3_cost = 400
on_hit_u4_cost = 500
on_death_u1_cost = 200
on_death_u2_cost = 250
on_death_u3_cost = 275
on_death_u4_cost = 350

[node name="MenuBackground" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -424.0
margin_top = -250.0
margin_right = 426.0
margin_bottom = 250.0
color = Color( 0.0235294, 0.521569, 0.921569, 0.247059 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OnMissLabel" type="Label" parent="MenuBackground"]
margin_left = 80.644
margin_top = 54.4827
margin_right = 235.644
margin_bottom = 98.4832
custom_fonts/font = SubResource( 1 )
text = "On Miss"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OnMiss_U1_Button" type="Button" parent="MenuBackground" groups=[
"Button",
]]
margin_left = 80.644
margin_top = 121.782
margin_right = 233.644
margin_bottom = 189.782
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="Sprite" parent="MenuBackground"]
position = Vector2( 107.401, 155.674 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 5 )

[node name="Icon_Text" type="Label" parent="MenuBackground"]
margin_left = 131.644
margin_top = 121.782
margin_right = 235.644
margin_bottom = 189.782
custom_fonts/font = SubResource( 2 )
text = "Loose Change"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OnMiss_U2_Button" type="Button" parent="MenuBackground" groups=[
"Button",
]]
margin_left = 80.644
margin_top = 220.102
margin_right = 233.644
margin_bottom = 288.102
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon2" type="Sprite" parent="MenuBackground"]
position = Vector2( 105, 254 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 5 )

[node name="Icon_Text2" type="Label" parent="MenuBackground"]
margin_left = 131.401
margin_top = 220.102
margin_right = 235.401
margin_bottom = 288.102
custom_fonts/font = SubResource( 2 )
text = "Health Regen"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OnMiss_U3_Button" type="Button" parent="MenuBackground" groups=[
"Button",
]]
margin_left = 80.644
margin_top = 312.912
margin_right = 233.644
margin_bottom = 380.912
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon3" type="Sprite" parent="MenuBackground"]
position = Vector2( 105, 350 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 5 )

[node name="Icon_Text3" type="Label" parent="MenuBackground"]
margin_left = 129.0
margin_top = 318.0
margin_right = 233.0
margin_bottom = 386.0
custom_fonts/font = SubResource( 2 )
text = "Health Regen"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OnMiss_U4_Button" type="Button" parent="MenuBackground" groups=[
"Button",
]]
margin_left = 80.644
margin_top = 407.348
margin_right = 233.644
margin_bottom = 475.348
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon4" type="Sprite" parent="MenuBackground"]
position = Vector2( 105, 446 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 5 )

[node name="Icon_Text4" type="Label" parent="MenuBackground"]
margin_left = 131.401
margin_top = 407.348
margin_right = 235.401
margin_bottom = 475.348
custom_fonts/font = SubResource( 2 )
text = "Health Regen"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OnHitLabel" type="Label" parent="MenuBackground"]
margin_left = 319.444
margin_top = 54.4827
margin_right = 474.444
margin_bottom = 98.4832
custom_fonts/font = SubResource( 1 )
text = "On Hit"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OnHit_U1_Button" type="Button" parent="MenuBackground" groups=[
"Button",
]]
margin_left = 319.444
margin_top = 121.782
margin_right = 472.444
margin_bottom = 189.782
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon5" type="Sprite" parent="MenuBackground"]
position = Vector2( 345, 158 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 5 )

[node name="Icon_Text5" type="Label" parent="MenuBackground"]
margin_left = 369.0
margin_top = 126.0
margin_right = 473.0
margin_bottom = 194.0
custom_fonts/font = SubResource( 2 )
text = "Health Regen"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OnHit_U2_Button" type="Button" parent="MenuBackground" groups=[
"Button",
]]
margin_left = 319.444
margin_top = 220.102
margin_right = 472.444
margin_bottom = 288.102
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon6" type="Sprite" parent="MenuBackground"]
position = Vector2( 353, 254 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 5 )

[node name="Icon_Text6" type="Label" parent="MenuBackground"]
margin_left = 369.0
margin_top = 222.0
margin_right = 473.0
margin_bottom = 290.0
custom_fonts/font = SubResource( 2 )
text = "Health Regen"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OnHit_U3_Button" type="Button" parent="MenuBackground" groups=[
"Button",
]]
margin_left = 319.444
margin_top = 312.912
margin_right = 472.444
margin_bottom = 380.912
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon7" type="Sprite" parent="MenuBackground"]
position = Vector2( 353, 350 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 5 )

[node name="Icon_Text7" type="Label" parent="MenuBackground"]
margin_left = 369.0
margin_top = 312.912
margin_right = 473.0
margin_bottom = 380.912
custom_fonts/font = SubResource( 2 )
text = "Health Regen"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OnHit_U4_Button" type="Button" parent="MenuBackground" groups=[
"Button",
]]
margin_left = 319.444
margin_top = 407.348
margin_right = 472.444
margin_bottom = 475.348
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon8" type="Sprite" parent="MenuBackground"]
position = Vector2( 353, 446 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 5 )

[node name="Icon_Text8" type="Label" parent="MenuBackground"]
margin_left = 377.0
margin_top = 407.348
margin_right = 481.0
margin_bottom = 475.348
custom_fonts/font = SubResource( 2 )
text = "Health Regen"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OnDeathLabel" type="Label" parent="MenuBackground"]
margin_left = 541.255
margin_top = 54.4827
margin_right = 719.255
margin_bottom = 98.4832
custom_fonts/font = SubResource( 1 )
text = "On Death"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OnDeath_U1_Button" type="Button" parent="MenuBackground" groups=[
"Button",
]]
margin_left = 558.206
margin_top = 121.782
margin_right = 711.206
margin_bottom = 189.782
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon9" type="Sprite" parent="MenuBackground"]
position = Vector2( 585, 158 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 5 )

[node name="Icon_Text9" type="Label" parent="MenuBackground"]
margin_left = 609.0
margin_top = 126.0
margin_right = 713.0
margin_bottom = 194.0
custom_fonts/font = SubResource( 2 )
text = "Health Regen"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OnDeath_U2_Button" type="Button" parent="MenuBackground" groups=[
"Button",
]]
margin_left = 558.206
margin_top = 220.102
margin_right = 711.206
margin_bottom = 288.102
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon10" type="Sprite" parent="MenuBackground"]
position = Vector2( 585, 254 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 5 )

[node name="Icon_Text10" type="Label" parent="MenuBackground"]
margin_left = 609.0
margin_top = 222.0
margin_right = 713.0
margin_bottom = 290.0
custom_fonts/font = SubResource( 2 )
text = "Health Regen"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OnDeath_U3_Button" type="Button" parent="MenuBackground" groups=[
"Button",
]]
margin_left = 558.206
margin_top = 312.912
margin_right = 711.206
margin_bottom = 380.912
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon11" type="Sprite" parent="MenuBackground"]
position = Vector2( 585, 350 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 5 )

[node name="Icon_Text11" type="Label" parent="MenuBackground"]
margin_left = 608.0
margin_top = 318.0
margin_right = 712.0
margin_bottom = 386.0
custom_fonts/font = SubResource( 2 )
text = "Health Regen"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OnDeath_U4_Button" type="Button" parent="MenuBackground" groups=[
"Button",
]]
margin_left = 558.206
margin_top = 407.348
margin_right = 711.206
margin_bottom = 475.348
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon12" type="Sprite" parent="MenuBackground"]
position = Vector2( 585, 446 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 5 )

[node name="Icon_Text12" type="Label" parent="MenuBackground"]
margin_left = 609.0
margin_top = 414.0
margin_right = 713.0
margin_bottom = 482.0
custom_fonts/font = SubResource( 2 )
text = "Health Regen"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescriptionLabel" type="Label" parent="MenuBackground"]
margin_left = 750.082
margin_top = 96.0761
margin_right = 949.082
margin_bottom = 195.076
text = "Description Label : I should appear only when the mouse is over a button, I will then display a text depending on what Button the mouse in covering"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescriptionLabel_ColorRect" type="ColorRect" parent="MenuBackground/DescriptionLabel"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.937255, 0.117647, 0.117647, 0.647059 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="MenuBackground" groups=[
"Button",
]]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -99.9177
margin_top = 16.909
margin_right = -24.9177
margin_bottom = 66.909
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoldLabel" type="Label" parent="MenuBackground"]
margin_left = 14.708
margin_top = 16.909
margin_right = 123.708
margin_bottom = 30.909
text = "Current Gold Is : "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonPrepSound" type="AudioStreamPlayer2D" parent="MenuBackground"]
stream = ExtResource( 3 )

[node name="ButtonPressSound" type="AudioStreamPlayer2D" parent="MenuBackground"]
stream = ExtResource( 4 )
[connection signal="mouse_entered" from="MenuBackground/OnMiss_U1_Button" to="." method="_on_OnMiss_U1_Button_mouse_entered"]
[connection signal="pressed" from="MenuBackground/OnMiss_U1_Button" to="." method="_on_OnMiss_U1_Button_pressed"]
[connection signal="mouse_entered" from="MenuBackground/OnMiss_U2_Button" to="." method="_on_OnMiss_U2_Button_mouse_entered"]
[connection signal="pressed" from="MenuBackground/OnMiss_U2_Button" to="." method="_on_OnMiss_U2_Button_pressed"]
[connection signal="mouse_entered" from="MenuBackground/OnMiss_U3_Button" to="." method="_on_OnMiss_U3_Button_mouse_entered"]
[connection signal="pressed" from="MenuBackground/OnMiss_U3_Button" to="." method="_on_OnMiss_U3_Button_pressed"]
[connection signal="mouse_entered" from="MenuBackground/OnMiss_U4_Button" to="." method="_on_OnMiss_U4_Button_mouse_entered"]
[connection signal="pressed" from="MenuBackground/OnMiss_U4_Button" to="." method="_on_OnMiss_U4_Button_pressed"]
[connection signal="mouse_entered" from="MenuBackground/OnHit_U1_Button" to="." method="_on_OnHit_U1_Button_mouse_entered"]
[connection signal="pressed" from="MenuBackground/OnHit_U1_Button" to="." method="_on_OnHit_U1_Button_pressed"]
[connection signal="mouse_entered" from="MenuBackground/OnHit_U2_Button" to="." method="_on_OnHit_U2_Button_mouse_entered"]
[connection signal="pressed" from="MenuBackground/OnHit_U2_Button" to="." method="_on_OnHit_U2_Button_pressed"]
[connection signal="mouse_entered" from="MenuBackground/OnHit_U3_Button" to="." method="_on_OnHit_U3_Button_mouse_entered"]
[connection signal="pressed" from="MenuBackground/OnHit_U3_Button" to="." method="_on_OnHit_U3_Button_pressed"]
[connection signal="mouse_entered" from="MenuBackground/OnHit_U4_Button" to="." method="_on_OnHit_U4_Button_mouse_entered"]
[connection signal="pressed" from="MenuBackground/OnHit_U4_Button" to="." method="_on_OnHit_U4_Button_pressed"]
[connection signal="mouse_entered" from="MenuBackground/OnDeath_U1_Button" to="." method="_on_OnDeath_U1_Button_mouse_entered"]
[connection signal="pressed" from="MenuBackground/OnDeath_U1_Button" to="." method="_on_OnDeath_U1_Button_pressed"]
[connection signal="mouse_entered" from="MenuBackground/OnDeath_U2_Button" to="." method="_on_OnDeath_U2_Button_mouse_entered"]
[connection signal="pressed" from="MenuBackground/OnDeath_U2_Button" to="." method="_on_OnDeath_U2_Button_pressed"]
[connection signal="mouse_entered" from="MenuBackground/OnDeath_U3_Button" to="." method="_on_OnDeath_U3_Button_mouse_entered"]
[connection signal="pressed" from="MenuBackground/OnDeath_U3_Button" to="." method="_on_OnDeath_U3_Button_pressed"]
[connection signal="mouse_entered" from="MenuBackground/OnDeath_U4_Button" to="." method="_on_OnDeath_U4_Button_mouse_entered"]
[connection signal="pressed" from="MenuBackground/OnDeath_U4_Button" to="." method="_on_OnDeath_U4_Button_pressed"]
[connection signal="mouse_entered" from="MenuBackground/ExitButton" to="." method="_on_ExitButton_mouse_entered"]
[connection signal="pressed" from="MenuBackground/ExitButton" to="." method="_on_ExitButton_pressed"]
